--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <button class="botao">Criar um portifolio</button>
     <button class="botao">Atualizar meu curriculo</button>
 </div>  
+<script src="main.js"></script>
 </body>
 </html>
