--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <button class="botao">Criar projetos em JavaScript</button>
     <button class="botao">Criar um portifolio</button>
     <button class="botao">Atualizar meu curriculo</button>
-</div>  
+</div>
+<div class="abas-textos">
+  <div class="aba-comteudo">
+    
+  </div>
+</div> 
 <script src="main.js"></script>
 </body>
 </html>
