--- a/index.html
+++ b/index.html
@@ -9,17 +9,32 @@
 <body>
 <section class="conteudo-principal"></section>
 <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
-<div class="botoes">
+  <div class="conteudo">
+  <div class="botoes">
     <button class="botao">Cursos na Alura</button>
     <button class="botao">Criar projetos em JavaScript</button>
     <button class="botao">Criar um portifolio</button>
     <button class="botao">Atualizar meu curriculo</button>
 </div>
 <div class="abas-textos">
-  <div class="aba-comteudo">
-    
+  <div class="aba-comteudo ativo">
+       <h3 class="aba-conteudo-titulo-principal">estrudar 4 cursos na alura</h3>
+       <h4 class="aba-conteudo-titulo-secundario">tempo para completar o obejetivo</h4>
   </div>
-</div> 
-<script src="main.js"></script>
+  <div class="aba-comteudo">
+      <h3 class="aba-conteudo-titulo-principal">criar 5 projetos em JavaScript</h3>
+      <h4 class="aba-conteudo-titulo-secundario">tempo para completrar o obejetivo</h4>
+  </div>
+  <div class="aba-conteudo">
+    <h3 class="aba-conteudo-titulo-principal">criar portifolio com os meus 3 melhores projetos</h3>
+    <h4 class="aba-conteudo-titulo-secundario">tempo para completar o obejetivo</h4>
+  </div>
+  <div class="aba-conteudo">
+  <h3 class="aba-conteudo-titulo-principal">atualizar meu curriculo com os certificados da alura</div>
+  <h4 class="aba-conteudo-titulo-secundario">tempo para completar o objetivo</h4>
+  </div>
+</div>
+</div>
+    <script src="main.js"></script>
 </body>
 </html>
