--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 </div>
 <div class="abas-textos">
   <div class="aba-comteudo ativo">
-       <h3 class="aba-conteudo-titulo-principal">estrudar 4 cursos na alura</h3>
+       <h3 class="aba-conteudo-titulo-principal">estudar 4 cursos na alura</h3>
        <h4 class="aba-conteudo-titulo-secundario">tempo para completar o obejetivo</h4>
+       <div class="contador"></div>
   </div>
   <div class="aba-comteudo">
       <h3 class="aba-conteudo-titulo-principal">criar 5 projetos em JavaScript</h3>
       <h4 class="aba-conteudo-titulo-secundario">tempo para completrar o obejetivo</h4>
-  </div>
+  </div class="contador"></div>
   <div class="aba-conteudo">
     <h3 class="aba-conteudo-titulo-principal">criar portifolio com os meus 3 melhores projetos</h3>
     <h4 class="aba-conteudo-titulo-secundario">tempo para completar o obejetivo</h4>
